tests/js_error/error_types/parse.exp
SyntaxError: Unknown token @
  ┌ tests/js_error/error_types/parse.js:1:5
  |
1 | 1 + @
  |     ^